// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Address Lookup Address Lookup 1`] = `
<form
  className="relative"
  onSubmit={[Function]}
>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="addressLookupPostcode"
  >
    Postcode
  </label>
  <div
    className="flex"
  >
    <div
      className="w-full mr-4"
    >
      <div
        className="relative"
      >
        <input
          className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500  "
          id="addressLookupPostcode"
          name="addressLookupPostcode"
        />
      </div>
    </div>
    <button
      className="font-semibold text-white rounded bg-sdh-yellow hover:bg-yellow-400 active:bg-yellow-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
      type="submit"
    >
      <span
        className="relative flex items-center justify-center truncate"
      >
        Find address
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Alert Alert 1`] = `
<div
  className="p-4  text-white bg-red-600"
>
  <div
    className="flex"
  >
    <div
      className="flex-shrink-0 pr-2"
    >
      <svg
        className="w-5 h-5"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M464 720a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
        />
      </svg>
    </div>
    <div
      className="flex-1"
    >
      <strong>
        Basic alert
      </strong>
      <p>
        And a little bit of text...
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Custom Icon 1`] = `
<div
  className="p-4  text-white bg-red-600"
>
  <div
    className="flex"
  >
    <div
      className="flex-shrink-0 pr-2"
    >
      <svg
        className="w-5 h-5"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M764 280.9c-14-30.6-33.9-58.1-59.3-81.6C653.1 151.4 584.6 125 512 125s-141.1 26.4-192.7 74.2c-25.4 23.6-45.3 51-59.3 81.7-14.6 32-22 65.9-22 100.9v27c0 6.2 5 11.2 11.2 11.2h54c6.2 0 11.2-5 11.2-11.2v-27c0-99.5 88.6-180.4 197.6-180.4s197.6 80.9 197.6 180.4c0 40.8-14.5 79.2-42 111.2-27.2 31.7-65.6 54.4-108.1 64-24.3 5.5-46.2 19.2-61.7 38.8a110.85 110.85 0 0 0-23.9 68.6v31.4c0 6.2 5 11.2 11.2 11.2h54c6.2 0 11.2-5 11.2-11.2v-31.4c0-15.7 10.9-29.5 26-32.9 58.4-13.2 111.4-44.7 149.3-88.7 19.1-22.3 34-47.1 44.3-74 10.7-27.9 16.1-57.2 16.1-87 0-35-7.4-69-22-100.9zM512 787c-30.9 0-56 25.1-56 56s25.1 56 56 56 56-25.1 56-56-25.1-56-56-56z"
        />
      </svg>
    </div>
    <div
      className="flex-1"
    >
      <strong>
        Alert with custom icon
      </strong>
      <p>
        And a little bit of text...
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Button 1`] = `
<div
  className="space-x-2"
>
  <button
    className="text-gray-800 border border-gray-300 rounded hover:border-gray-400 active:border-gray-400 relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      Button
    </span>
  </button>
  <button
    className="text-gray-800 border border-gray-300 rounded hover:border-gray-400 active:border-gray-400 relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition opacity-50 cursor-not-allowed"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Button With Icon 1`] = `
<div
  className="flex space-x-2"
>
  <button
    className="font-semibold text-white rounded bg-sdh-yellow hover:bg-yellow-400 active:bg-yellow-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      Button
      <svg
        className="w-4 h-4 ml-1 text-white opacity-50 duration-150 ease-in-out transition"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 1 0-56 0z"
        />
      </svg>
    </span>
  </button>
  <button
    className="font-semibold text-white rounded bg-sdh-yellow hover:bg-yellow-400 active:bg-yellow-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      <svg
        className="w-4 h-4 mr-1 text-white opacity-50 duration-150 ease-in-out transition"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 1 0-56 0z"
        />
      </svg>
      Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Danger Button 1`] = `
<button
  className="text-white bg-red-600 rounded hover:bg-red-700 active:bg-red-700 relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
  onClick={[Function]}
  type="button"
>
  <span
    className="relative flex items-center justify-center truncate"
  >
    Danger
  </span>
</button>
`;

exports[`Storyshots Button Primary Button 1`] = `
<div
  className="space-x-2"
>
  <button
    className="font-semibold text-white rounded bg-sdh-yellow hover:bg-yellow-400 active:bg-yellow-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      Primary
    </span>
  </button>
  <button
    className="font-semibold text-white rounded bg-sdh-yellow hover:bg-yellow-400 active:bg-yellow-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition opacity-50 cursor-not-allowed"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Secondary Button 1`] = `
<button
  className="font-semibold text-gray-500 rounded bg-gray-200 hover:bg-gray-300 active:bg-gray-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
  onClick={[Function]}
  type="button"
>
  <span
    className="relative flex items-center justify-center truncate"
  >
    Secondary
  </span>
</button>
`;

exports[`Storyshots Button Success Button 1`] = `
<button
  className="text-white bg-green-600 rounded hover:bg-green-500 active:bg-green-800 relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
  onClick={[Function]}
  type="button"
>
  <span
    className="relative flex items-center justify-center truncate"
  >
    <svg
      className="w-4 h-4 mr-1 text-white opacity-50 duration-150 ease-in-out transition"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
      />
    </svg>
    Success
  </span>
</button>
`;

exports[`Storyshots Checkbox Checkbox 1`] = `
<div>
  <div
    className="flex"
  >
    <input
      className="w-8 h-8 mr-3 text-blue-600 rounded outline-none form-checkbox focus:border-blue-500 focus:shadow-none"
      id="checkbox"
      label="Label"
      name="checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="mt-1"
      htmlFor="checkbox"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`Storyshots Date Picker Date Picker 1`] = `
<div>
  <div>
    <label
      className="block mb-1 font-extrabold"
      htmlFor="date-picker"
    >
      Date Picker
    </label>
    <div
      className="relative"
    >
      <input
        className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500   pr-10"
        data-testid="date-picker-input"
        id="date-picker"
        label="Date Picker"
        name="date-picker"
        onChange={[Function]}
        onMouseDown={[Function]}
      />
      <div
        className="absolute inset-y-0 flex items-center px-3 pointer-events-none right-0"
      >
        <svg
          className="w-4 h-4"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Date Picker Max Date 1`] = `
<div>
  <div>
    <label
      className="block mb-1 font-extrabold"
      htmlFor="date-picker"
    >
      Date Picker
    </label>
    <div
      className="relative"
    >
      <input
        className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500   pr-10"
        data-testid="date-picker-input"
        id="date-picker"
        label="Date Picker"
        max="2099-01-01"
        name="date-picker"
        onChange={[Function]}
        onMouseDown={[Function]}
      />
      <div
        className="absolute inset-y-0 flex items-center px-3 pointer-events-none right-0"
      >
        <svg
          className="w-4 h-4"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Date Picker Min Date 1`] = `
<div>
  <div>
    <label
      className="block mb-1 font-extrabold"
      htmlFor="date-picker"
    >
      Date Picker
    </label>
    <div
      className="relative"
    >
      <input
        className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500   pr-10"
        data-testid="date-picker-input"
        id="date-picker"
        label="Date Picker"
        min="2000-01-01"
        name="date-picker"
        onChange={[Function]}
        onMouseDown={[Function]}
      />
      <div
        className="absolute inset-y-0 flex items-center px-3 pointer-events-none right-0"
      >
        <svg
          className="w-4 h-4"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Error Input Error 1`] = `
<div
  className="flex items-center mt-1 text-red-600"
>
  <svg
    className="w-4 h-4"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M464 720a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
    />
  </svg>
  <p
    className="ml-1 text-xs"
  >
    Please provide a valid email
  </p>
</div>
`;

exports[`Storyshots Input Help Input Help 1`] = `
<div
  className="flex items-center mt-1 text-gray-500"
>
  <svg
    className="w-4 h-4"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
    />
    <path
      d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0z"
    />
  </svg>
  <p
    className="ml-1 text-sm"
  >
    Some help text
  </p>
</div>
`;

exports[`Storyshots Input Input 1`] = `
<div>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="input"
  >
    Name
  </label>
  <div
    className="relative"
  >
    <input
      className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500  "
      id="input"
      label="Name"
      name="input"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Input With Error 1`] = `
<div>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="inputError"
  >
    Input
  </label>
  <div
    className="relative"
  >
    <input
      className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500 text-red-600 border-red-600 focus:border-red-600 "
      id="inputError"
      label="Input"
      name="inputError"
      onChange={[Function]}
    />
  </div>
  <div
    className="flex items-center mt-1 text-red-600"
  >
    <svg
      className="w-4 h-4"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M464 720a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
      />
    </svg>
    <p
      className="ml-1 text-xs"
    >
      Please provide a valid email
    </p>
  </div>
</div>
`;

exports[`Storyshots Input With Icon 1`] = `
<div
  className="space-y-8"
>
  <div>
    <label
      className="block mb-1 font-extrabold"
      htmlFor="input error"
    >
      Right Icon
    </label>
    <div
      className="relative"
    >
      <input
        className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500   pr-10"
        id="input error"
        label="Right Icon"
        name="input error"
        onChange={[Function]}
      />
      <div
        className="absolute inset-y-0 flex items-center px-3 pointer-events-none right-0"
      >
        <svg
          className="w-4 h-4"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 110.8V792H136V270.8l-27.6-21.5 39.3-50.5 42.8 33.3h643.1l42.8-33.3 39.3 50.5-27.7 21.5zM833.6 232L512 482 190.4 232l-42.8-33.3-39.3 50.5 27.6 21.5 341.6 265.6a55.99 55.99 0 0 0 68.7 0L888 270.8l27.6-21.5-39.3-50.5-42.7 33.2z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div>
    <label
      className="block mb-1 font-extrabold"
      htmlFor="withIcon"
    >
      Left Icon
    </label>
    <div
      className="relative"
    >
      <input
        className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500   pl-10"
        id="withIcon"
        label="Left Icon"
        name="withIcon"
        onChange={[Function]}
      />
      <div
        className="absolute inset-y-0 flex items-center px-3 pointer-events-none left-0"
      >
        <svg
          className="w-4 h-4"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 110.8V792H136V270.8l-27.6-21.5 39.3-50.5 42.8 33.3h643.1l42.8-33.3 39.3 50.5-27.7 21.5zM833.6 232L512 482 190.4 232l-42.8-33.3-39.3 50.5 27.6 21.5 341.6 265.6a55.99 55.99 0 0 0 68.7 0L888 270.8l27.6-21.5-39.3-50.5-42.7 33.2z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Basic Label 1`] = `
<label
  className="block mb-1 font-extrabold"
  htmlFor="label"
>
  Label
</label>
`;

exports[`Storyshots Label Required 1`] = `
<label
  className="block mb-1 font-extrabold"
  htmlFor="label"
>
  Label
  <span
    className="text-red-600"
  >
     *
  </span>
</label>
`;

exports[`Storyshots Panel Custom Class 1`] = `
<div
  className="panel bg-blue-50"
>
  <div
    className="p-4 border border-t-0 border-gray-300 rounded-b"
  >
    <div>
      <label
        className="block mb-1 font-extrabold"
        htmlFor="input"
      >
        Input
      </label>
      <div
        className="relative"
      >
        <input
          className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500  "
          id="input"
          label="Input"
          name="input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Panel Panel 1`] = `
<div
  className="panel "
>
  <div
    className="p-4 border border-t-0 border-gray-300 rounded-b"
  >
    <div>
      <label
        className="block mb-1 font-extrabold"
        htmlFor="input"
      >
        Input
      </label>
      <div
        className="relative"
      >
        <input
          className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500  "
          id="input"
          label="Input"
          name="input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Button Radio Button 1`] = `
Array [
  <label
    className="flex items-center"
  >
    <input
      className="absolute invisible"
      label="Option 1"
      onChange={[Function]}
      type="radio"
      value="OptionOne"
    />
    <div
      className="w-8 h-8 border rounded-full"
    />
    <span
      className="ml-3"
    >
      Option 1
    </span>
  </label>,
  <label
    className="flex items-center"
  >
    <input
      checked={true}
      className="absolute invisible"
      label="Option 2"
      onChange={[Function]}
      type="radio"
      value="OptionTwo"
    />
    <div
      className="flex items-center justify-center w-8 h-8 border rounded-full"
    >
      <div
        className="w-4 h-4 bg-blue-600 rounded-full"
      />
    </div>
    <span
      className="ml-3"
    >
      Option 2
    </span>
  </label>,
]
`;

exports[`Storyshots Select Select 1`] = `
<div>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="country"
  >
    Country
  </label>
  <div
    className="relative"
  >
    <select
      className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500 "
      defaultValue=""
      id="country"
      label="Country"
      name="country"
      onChange={[Function]}
    >
      <option
        hidden={true}
        value=""
      >
        Select an option...
      </option>
      <option
        value="Great Britain"
      >
        Great Britain
      </option>
      <option
        value="France"
      >
        France
      </option>
      <option
        value="Spain"
      >
        Spain
      </option>
      <option
        value="Germany"
      >
        Germany
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-3 text-gray-600 pointer-events-none"
    >
      <div>
        <svg
          className="w-4 h-4 -mb-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
          />
        </svg>
        <svg
          className="w-4 h-4 -mt-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea Textarea 1`] = `
<div>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="textarea"
  >
    Textarea
  </label>
  <textarea
    className="block w-full form-input rounded-none text-gray-900 focus:shadow-none focus:border-blue-500 "
    id="textarea"
    label="Textarea"
    name="textarea"
    onChange={[Function]}
    rows={5}
  />
</div>
`;

exports[`Storyshots Textarea With Error 1`] = `
<div>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="textarea"
  >
    Textarea
  </label>
  <textarea
    className="block w-full form-input rounded-none text-gray-900 focus:shadow-none focus:border-blue-500 text-red-600 border-red-600 focus:border-red-600"
    id="textarea"
    label="Textarea"
    name="textarea"
    onChange={[Function]}
    rows={5}
  />
  <div
    className="flex items-center mt-1 text-red-600"
  >
    <svg
      className="w-4 h-4"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M464 720a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
      />
    </svg>
    <p
      className="ml-1 text-xs"
    >
      Please provide some text
    </p>
  </div>
</div>
`;

exports[`Storyshots Toggle Basic Toggle 1`] = `
<div>
  <label
    className="block text-gray-600"
    htmlFor="toggle1"
  >
    Toggle
    <input
      className="checkbox"
      id="toggle1"
      label="Toggle"
      name="toggle1"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="toggle"
    >
      <span
        className="toggleHandle"
      />
    </div>
  </label>
</div>
`;

exports[`Storyshots Tooltip Tooltip 1`] = `
<div
  aria-describedby={null}
  className="inline-block"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  title="Tooltip Message"
>
  <svg
    className="w-4 h-4"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M764 280.9c-14-30.6-33.9-58.1-59.3-81.6C653.1 151.4 584.6 125 512 125s-141.1 26.4-192.7 74.2c-25.4 23.6-45.3 51-59.3 81.7-14.6 32-22 65.9-22 100.9v27c0 6.2 5 11.2 11.2 11.2h54c6.2 0 11.2-5 11.2-11.2v-27c0-99.5 88.6-180.4 197.6-180.4s197.6 80.9 197.6 180.4c0 40.8-14.5 79.2-42 111.2-27.2 31.7-65.6 54.4-108.1 64-24.3 5.5-46.2 19.2-61.7 38.8a110.85 110.85 0 0 0-23.9 68.6v31.4c0 6.2 5 11.2 11.2 11.2h54c6.2 0 11.2-5 11.2-11.2v-31.4c0-15.7 10.9-29.5 26-32.9 58.4-13.2 111.4-44.7 149.3-88.7 19.1-22.3 34-47.1 44.3-74 10.7-27.9 16.1-57.2 16.1-87 0-35-7.4-69-22-100.9zM512 787c-30.9 0-56 25.1-56 56s25.1 56 56 56 56-25.1 56-56-25.1-56-56-56z"
    />
  </svg>
</div>
`;
